force-app/main/default/objects/tc9_pr__Payroll_Configuration__c/tc9_pr__Payroll_Configuration__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Payroll Configuration</label>
</CustomObject>