force-app/main/default/objects/tc9_pr__Payroll_Configuration__c/fields/tc9_pr__Assignment_Pay_Schedule_from_Payee__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Assignment_Pay_Schedule_from_Payee__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If True, when a Payee is first allocated to a Assignment, the Primary Pay Schedule defined on the Payee will be populated on the Assignment. If false the Pay Schedule will be taken from the Client.</description>
    <inlineHelpText>If True, when a Payee is first allocated to a Assignment, the Primary Pay Schedule defined on the Payee will be populated on the Assignment. If false the Pay Schedule will be taken from the Client.</inlineHelpText>
    <label>Assignment Pay Schedule from Payee</label>
    <type>Checkbox</type>
</CustomField>