force-app/main/default/objects/tc9_pr__Payroll_Configuration__c/fields/tc9_pr__Batch_Log_Retention_Days__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Batch_Log_Retention_Days__c</fullName>
    <description>The number of days for which Batch Log records will be retained when the deletion job runs.</description>
    <inlineHelpText>The number of days for which Batch Log records will be retained when the deletion job runs.</inlineHelpText>
    <label>Batch Log Retention Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>