force-app/main/default/objects/tc9_pr__Payroll_Configuration__c/fields/tc9_pr__Callout_API_Name__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Callout_API_Name__c</fullName>
    <label>Callout API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>