force-app/main/default/objects/tc9_pr__Payroll_Configuration__c/fields/tc9_pr__Crypto_Key__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Crypto_Key__c</fullName>
    <label>Crypto Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>