force-app/main/default/objects/tc9_pr__Payroll_Configuration__c/fields/tc9_pr__Disable_FLS_CRUD_Validation__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Disable_FLS_CRUD_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable FLS/CRUD Validation</label>
    <type>Checkbox</type>
</CustomField>