force-app/main/default/objects/tc9_pr__Payroll_Configuration__c/fields/tc9_pr__Enable_Pay_Batch_Hard_Delete__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Enable_Pay_Batch_Hard_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If Enabled, it deletes the pay batch and its related records from salesforce and recycle bin</description>
    <inlineHelpText>If Enabled, it deletes the pay batch and its related records from salesforce and recycle bin</inlineHelpText>
    <label>Enable Pay Batch Hard Delete</label>
    <type>Checkbox</type>
</CustomField>