force-app/main/default/objects/tc9_pr__Payroll_Configuration__c/fields/tc9_pr__Enforce_Flag_Validation__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Enforce_Flag_Validation__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This is to control whether users must acknowledge Payee Pay Batch warning flags before proceeding to finalise a pay batch</description>
    <inlineHelpText>This is to control whether users must acknowledge Payee Pay Batch warning flags before proceeding to finalise a pay batch</inlineHelpText>
    <label>Enforce Flag Validation</label>
    <type>Checkbox</type>
</CustomField>