force-app/main/default/objects/tc9_pr__Payroll_Configuration__c/fields/tc9_pr__Large_Pay_Batch_Limit__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Large_Pay_Batch_Limit__c</fullName>
    <description>To allow for large pay batches to be accessible in the Pay Batch Manager, the value provided in the setting will throttle the number of rows in the data table. Minimum is defaulted to 1 and max can be up to 9999.</description>
    <inlineHelpText>To allow for large pay batches to be accessible in the Pay Batch Manager, the value provided in the setting will throttle the number of rows in the data table. Minimum is defaulted to 1 and max can be up to 9999.</inlineHelpText>
    <label>Large Pay Batch Limit</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>