force-app/main/default/objects/tc9_pr__Payroll_Configuration__c/fields/tc9_pr__Large_Pay_Batch_Org__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Large_Pay_Batch_Org__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true then this org will limit the Pay Batch Manager view to handle large Pay Batches as per the limit applied.</description>
    <inlineHelpText>If true then this org will limit the Pay Batch Manager view to handle large Pay Batches as per the limit applied.</inlineHelpText>
    <label>Large Pay Batch Org?</label>
    <type>Checkbox</type>
</CustomField>