force-app/main/default/objects/tc9_pr__Payroll_Configuration__c/fields/tc9_pr__Pay_Batch_Manager_Funding_Required__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Pay_Batch_Manager_Funding_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the Funding Requirement field is required when creating a new Pay Batch using the Pay Batch Manager user interface.</description>
    <inlineHelpText>Indicates whether the Funding Requirement field is required when creating a new Pay Batch using the Pay Batch Manager user interface.</inlineHelpText>
    <label>Pay Batch Manager Funding Required</label>
    <type>Checkbox</type>
</CustomField>