force-app/main/default/objects/tc9_pr__Payroll_Configuration__c/fields/tc9_pr__STP2_Apply_Validations__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__STP2_Apply_Validations__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that STP 2 in-code validations should be applied when users create/update records.</description>
    <inlineHelpText>Indicates that STP 2 in-code validations should be applied when users create/update records.</inlineHelpText>
    <label>STP2 Apply Validations?</label>
    <type>Checkbox</type>
</CustomField>