force-app/main/default/objects/tc9_pr__Payroll_Configuration__c/fields/tc9_pr__STP2_Report_Child_Support__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__STP2_Report_Child_Support__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that Child Support Deduction and Garnishee amounts will be included in STP Phase 2 reporting.</description>
    <inlineHelpText>Indicates that Child Support Deduction and Garnishee amounts will be included in STP Phase 2 reporting.</inlineHelpText>
    <label>STP2 Report Child Support?</label>
    <type>Checkbox</type>
</CustomField>