force-app/main/default/objects/tc9_pr__Payroll_Configuration__c/fields/tc9_pr__STP2_Reporting_Active__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__STP2_Reporting_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that STP Phase 2 reporting is active for all STP Lodgements.</description>
    <inlineHelpText>Indicates that STP Phase 2 reporting is active for all STP Lodgements.</inlineHelpText>
    <label>STP2 Reporting Active?</label>
    <type>Checkbox</type>
</CustomField>